--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "mplfinance>=0.12.10b0",
     "pandas>=2.2,<3.0",
     "pandas-ta>=0.4.71b0",
+    "pydantic-extra-types[all]>=2.11.0",
     "pydantic-settings==2.7.1",
     "scipy>=1.17.0",
     "ta-lib>=0.6.8",
