--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "httpx>=0.28.1",
     "matplotlib>=3.10.8",
     "mplfinance>=0.12.10b0",
+    "openpyxl>=3.1.0",
     "pandas>=2.2,<3.0",
     "pandas-ta>=0.4.71b0",
     "pydantic-extra-types[all]>=2.11.0",
